decaf-compiler/samples/lex/string.decaf.out

*** Error line 3.
"valid"
^^^^^^^
*** syntax error

